objects/Team_Member__c.object
<CustomObject>
    <description>Team Members for PV Direct Jobs</description>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate1_Effective_Date_Internal__c</fullName>
        <formula>User__r.Rate1_Effective_Date__c</formula>
        <label>Rate1 Effective Date (Internal)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate1_Effective_Date_Project__c</fullName>
        <description>Effective date of Rate1 (Project).</description>
        <label>Rate1 Effective Date (Project)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate1_Internal__c</fullName>
        <formula>User__r.Rate1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate1 (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate1_Project__c</fullName>
        <description>2nd most current project rate.</description>
        <label>Rate1 (Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate2_Effective_Date_Internal__c</fullName>
        <formula>User__r.Rate2_Effective_Date__c</formula>
        <label>Rate2 Effective Date (Internal)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate2_Effective_Date_Project__c</fullName>
        <description>Effective date of Rate2 (Project)</description>
        <label>Rate2 Effective Date (Project)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate2_Internal__c</fullName>
        <formula>User__r.Rate2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate2 (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate2_Project__c</fullName>
        <description>3rd most current project rate.</description>
        <label>Rate2 (Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate3_Effective_Date_Internal__c</fullName>
        <formula>User__r.Rate3_Effective_Date__c</formula>
        <label>Rate3 Effective Date (Internal)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate3_Effective_Date_Project__c</fullName>
        <description>Effective date of Rate3 (Project).</description>
        <label>Rate3 Effective Date (Project)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate3_Internal__c</fullName>
        <formula>User__r.Rate3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate3 (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate3_Project__c</fullName>
        <description>3rd most current project rate.</description>
        <label>Rate3 (Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <label>Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>